--- a/styles/style.css
+++ b/styles/style.css
@@ -54,10 +54,10 @@ img {
   margin: 0 auto;
 }
 body {
-  width: 70%;
+  width: 90%;
   margin: 2em auto;
   background-color: #FFFFFF;
-  padding: 0 20px 20px 20px;
+  padding: 0 auto;
   border: 2px solid gray;
 }
 h1 {
